--- a/catalog.html
+++ b/catalog.html
@@ -17,8 +17,8 @@
           <a
             href="index.html"
             class="logo uppercase"
-            alt="Логотип Техномарт"
-            area-label="Перейти на главную страницу"
+            title="Логотип Техномарт"
+            aria-label="Перейти на главную страницу"
           ></a>
 
           <form
@@ -78,7 +78,9 @@
             Интернет-магазин строительных материалов и инструментов для ремонта
           </h1>
           <address>
-            <a class="phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
+            <a class="phone" href="tel:+78125550555" aria-label="Телефон:"
+              >+7 (812) 555-05-55</a
+            >
             <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </address>
           <div class="id-user-options-container">
@@ -86,7 +88,7 @@
               <a
                 class="user-block-name"
                 href="#"
-                area-label="Перейти в личный кабинет"
+                aria-label="Перейти в личный кабинет"
               >
                 <svg
                   aria-hidden="true"
@@ -104,7 +106,7 @@
                 >Равшан Джамшутович</a
               >
 
-              <a href="#" area-label="Выйти из аккаунта">
+              <a href="#" aria-label="Выйти из аккаунта">
                 <svg
                   class="log-out-icon"
                   width="20"
@@ -163,7 +165,7 @@
           <h2 class="hidden">Навигационная цепочка</h2>
           <ul class="breadcrumbs">
             <li class="breadcrumbs-item">
-              <a href="index.html" area-label="Перейти на главную страницу"
+              <a href="index.html" aria-label="Перейти на главную страницу"
                 ><svg
                   width="14"
                   height="12"
@@ -342,7 +344,7 @@
                   <a
                     class="up"
                     href="#"
-                    area-label="Сортировать по возрастанию"
+                    aria-label="Сортировать по возрастанию"
                   >
                     <svg
                       width="11"
@@ -355,7 +357,7 @@
                   ></a>
                 </li>
                 <li>
-                  <a class="down" href="#" area-label="Сортировать по убыванию">
+                  <a class="down" href="#" aria-label="Сортировать по убыванию">
                     <svg
                       width="11"
                       height="10"
@@ -376,14 +378,14 @@
                 <img
                   class="product-card-image bfg6000"
                   src="img/items-bfg6000.jpg"
-                  alt=""
+                  alt="Перфоратор BOSCH BFG 6000"
                   width="144"
                   height="128"
                 />
 
-                <span class="old-price" area-label="Старая цена">30500 Р.</span>
+                <span class="old-price" aria-label="Старая цена">30500 Р.</span>
                 <div class="price-container">
-                  <p class="price" area-label="Цена">25500 Р.</p>
+                  <p class="price" aria-label="Цена">25500 Р.</p>
                 </div>
                 <div class="product-pop-up">
                   <button
@@ -400,14 +402,14 @@
                 <img
                   class="product-card-image bfg6000"
                   src="img/items-bfg6000.jpg"
-                  alt=""
+                  alt="Перфоратор BOSCH BFG 6000"
                   width="144"
                   height="128"
                 />
 
-                <span class="old-price" area-label="Старая цена">30500 Р.</span>
+                <span class="old-price" aria-label="Старая цена">30500 Р.</span>
                 <div class="price-container">
-                  <p class="price" area-label="Цена">25500 Р.</p>
+                  <p class="price" aria-label="Цена">25500 Р.</p>
                 </div>
                 <div class="product-pop-up">
                   <button
@@ -425,14 +427,14 @@
                 <img
                   class="product-card-image bfg6000"
                   src="img/items-bfg6000.jpg"
-                  alt=""
+                  alt="Перфоратор BOSCH BFG 6000"
                   width="144"
                   height="128"
                 />
 
-                <span class="old-price" area-label="Старая цена">30500 Р.</span>
+                <span class="old-price" aria-label="Старая цена">30500 Р.</span>
                 <div class="price-container">
-                  <p class="price" area-label="Цена">25500 Р.</p>
+                  <p class="price" aria-label="Цена">25500 Р.</p>
                 </div>
                 <div class="product-pop-up">
                   <button
@@ -451,14 +453,14 @@
                 <img
                   class="product-card-image bfg3000"
                   src="img/items-bfg3000.jpg"
-                  alt=""
+                  alt="Перфоратор BOSCH BFG 3000"
                   width="127"
                   height="112"
                 />
 
-                <span class="old-price" area-label="Старая цена">22500 Р.</span>
+                <span class="old-price" aria-label="Старая цена">22500 Р.</span>
                 <div class="price-container">
-                  <p class="price" area-label="Цена">15500 Р.</p>
+                  <p class="price" aria-label="Цена">15500 Р.</p>
                 </div>
                 <div class="product-pop-up">
                   <button
@@ -475,14 +477,14 @@
                 <img
                   class="product-card-image bfg6000"
                   src="img/items-bfg6000.jpg"
-                  alt=""
+                  alt="Перфоратор BOSCH BFG 6000"
                   width="144"
                   height="128"
                 />
 
-                <span class="old-price" area-label="Старая цена">30500 Р.</span>
+                <span class="old-price" aria-label="Старая цена">30500 Р.</span>
                 <div class="price-container">
-                  <p class="price" area-label="Цена">25500 Р.</p>
+                  <p class="price" aria-label="Цена">25500 Р.</p>
                 </div>
                 <div class="product-pop-up">
                   <button
@@ -500,13 +502,13 @@
                 <img
                   class="product-card-image bfg2000"
                   src="img/items-bfg2000.jpg"
-                  alt=""
+                  alt="Перфоратор BOSCH BFG 2000"
                   width="127"
                   height="112"
                 />
 
                 <div class="price-container">
-                  <p class="price" area-label="Цена">12500 Р.</p>
+                  <p class="price" aria-label="Цена">12500 Р.</p>
                 </div>
                 <div class="product-pop-up">
                   <button
@@ -524,14 +526,14 @@
                 <img
                   class="product-card-image bfg3000"
                   src="img/items-bfg3000.jpg"
-                  alt=""
+                  alt="Перфоратор BOSCH BFG 3000"
                   width="127"
                   height="112"
                 />
 
-                <span class="old-price" area-label="Старая цена">22500 Р.</span>
+                <span class="old-price" aria-label="Старая цена">22500 Р.</span>
                 <div class="price-container">
-                  <p class="price" area-label="Цена">15500 Р.</p>
+                  <p class="price" aria-label="Цена">15500 Р.</p>
                 </div>
                 <div class="product-pop-up">
                   <button
@@ -548,14 +550,14 @@
                 <img
                   class="product-card-image bfg6000"
                   src="img/items-bfg6000.jpg"
-                  alt=""
+                  alt="Перфоратор BOSCH BFG 6000"
                   width="144"
                   height="128"
                 />
 
-                <span class="old-price" area-label="Старая цена">30500 Р.</span>
+                <span class="old-price" aria-label="Старая цена">30500 Р.</span>
                 <div class="price-container">
-                  <p class="price" area-label="Цена">25500 Р.</p>
+                  <p class="price" aria-label="Цена">25500 Р.</p>
                 </div>
                 <div class="product-pop-up">
                   <button
@@ -573,13 +575,13 @@
                 <img
                   class="product-card-image bfg2000"
                   src="img/items-bfg2000.jpg"
-                  alt=""
+                  alt="Перфоратор BOSCH BFG 2000"
                   width="127"
                   height="112"
                 />
 
                 <div class="price-container">
-                  <p class="price" area-label="Цена">12500 Р.</p>
+                  <p class="price" aria-label="Цена">12500 Р.</p>
                 </div>
                 <div class="product-pop-up">
                   <button
@@ -600,7 +602,7 @@
           <li>
             <a
               class="paginator-link active"
-              area-label="Перейти на текущую страницу каталога"
+              aria-label="Перейти на текущую страницу каталога"
               >1</a
             >
           </li>
@@ -608,7 +610,7 @@
             <a
               class="paginator-link"
               href="#"
-              area-label="Перейти на вторую страницу каталога"
+              aria-label="Перейти на вторую страницу каталога"
               >2</a
             >
           </li>
@@ -616,7 +618,7 @@
             <a
               class="paginator-link"
               href="#"
-              area-label="Перейти на третью страницу каталога"
+              aria-label="Перейти на третью страницу каталога"
               >3</a
             >
           </li>
@@ -624,7 +626,7 @@
             <a
               class="paginator-link uppercase"
               href="#"
-              area-label="Перейти на следующую страницу каталога"
+              aria-label="Перейти на следующую страницу каталога"
               >Следующая</a
             >
           </li>
@@ -685,8 +687,8 @@
             <a
               class="logo"
               href="#"
-              alt="Логотип Техномарт"
-              area-label="Перейти на главную страницу"
+              title="Логотип Техномарт"
+              aria-label="Перейти на главную страницу"
             ></a>
 
             <nav class="footer-navigation">
@@ -743,9 +745,9 @@
             <h2 class="hidden">Соцсети</h2>
             <ul class="footer-socials-list">
               <li class="social-btn">
-                <a href="#" area-label="Вконтакте"
+                <a href="#" aria-label="Вконтакте"
                   ><svg
-                    area-hidden="true"
+                    aria-hidden="true"
                     focusable="false"
                     width="44"
                     height="44"
@@ -767,9 +769,9 @@
                 ></a>
               </li>
               <li class="social-btn">
-                <a href="#" area-label="Фейсбук"
+                <a href="#" aria-label="Фейсбук"
                   ><svg
-                    area-hidden="true"
+                    aria-hidden="true"
                     focusable="false"
                     width="44"
                     height="44"
@@ -791,9 +793,9 @@
                 ></a>
               </li>
               <li class="social-btn">
-                <a href="#" area-label="Инстаграм"
+                <a href="#" aria-label="Инстаграм"
                   ><svg
-                    area-hidden="true"
+                    aria-hidden="true"
                     focusable="false"
                     width="44"
                     height="44"
@@ -822,7 +824,7 @@
             Обратная связь:
             <a
               href="mailto:mail@htmlacademy.ru"
-              area-label="Написать HTML Academy"
+              aria-label="Написать HTML Academy"
               >mail@htmlacademy.ru</a
             >
           </p>
@@ -830,7 +832,7 @@
             Разработано —
             <a
               href="https://htmlacademy.ru/intensive/htmlcss"
-              area-label="Перейти на сайт HTML Academy"
+              aria-label="Перейти на сайт HTML Academy"
               >htmlacademy.ru</a
             >
           </p>
