Попытка оживить декоративные элементы

--- a/catalog.html
+++ b/catalog.html
@@ -635,9 +635,13 @@
 
       <!--Поп-ап-->
 
-      <div class="modal modal-added-to-card-container">
-        <div class="modal-added-to-card">
-          <button class="close-btn" type="button" aria-label="Закрыть">
+      <div class="modal modal-added-to-cart-container">
+        <div class="modal-added-to-cart">
+          <button
+            class="close-btn added-close-btn"
+            type="button"
+            aria-label="Закрыть"
+          >
             <svg
               width="21"
               height="21"
@@ -839,5 +843,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/script.js"></script>
   </body>
 </html>
