Оживление дубль три

--- a/catalog.html
+++ b/catalog.html
@@ -55,8 +55,6 @@
               aria-label="Форма поиска по сайту"
               autocomplete="off"
             />
-
-            <!--<button class="search-field-btn" id="search-submit" type="submit"></button>-->
           </form>
 
           <div class="header-btn-wrapper">
@@ -65,7 +63,7 @@
             >
 
             <a class="header-btn-cart-full" href="#"
-              >Корзина: <span>10</span></a
+              >Корзина: <span class="goods-in-cart">10</span></a
             >
 
             <a class="header-btn-order" href="#">Оформить заказ</a>
