--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" href="favicon.ico" />
     <link rel="icon" href="img/icon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="img/180.png" />
+    <link rel="apple-touch-icon" href="img/180.png" />®
     <link rel="manifest" href="manifest.webmanifest" />
   </head>
   <body class="page-body">
