Оживление дубль пять

--- a/catalog.html
+++ b/catalog.html
@@ -841,6 +841,6 @@
         </div>
       </div>
     </footer>
-    <script src="js/script.js"></script>
+    <script src="js/catalog.js"></script>
   </body>
 </html>
