--- a/index.html
+++ b/index.html
@@ -274,6 +274,12 @@
                   <p>Настоящие мужские игрушки</p>
                 </div>
               </div>
+              <div class="slider slide-2">
+                <div class="slider-text-wrapper">
+                  <h3 class="uppercase">Дрели</h3>
+                  <p>Соседям на радость!</p>
+                </div>
+              </div>
           <div class="slider-controls">
             <button class="slider-circle-1 current" type="button" aria-label="Первый слайд"></button>
             <button class="slider-circle-2" type="button" aria-label="Второй слайд"></button>
