--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="main-bar">
         <div class="mid-header">
           <h1 class="main-header-description">
-            Интернет-магазин строительных материалов<br/>
+            Интернет-магазин строительных материалов<br />
             и инструментов для ремонта
           </h1>
           <address class="main-address">
@@ -273,7 +273,9 @@
                   />
                 </svg>
               </button>
-              <a class="open-catalog-btn uppercase" href="catalog.html"
+              <a
+                class="main-button open-catalog-btn uppercase"
+                href="catalog.html"
                 >Открыть каталог</a
               >
               <div class="slider slide-1 current">
@@ -379,7 +381,7 @@
           <section class="popular-goods">
             <div class="popular-wrapper">
               <h2 class="uppercase">Популярные товары:</h2>
-              <a class="button all-popular-goods-btn" href="#"
+              <a class="main-button all-popular-goods-btn" href="#"
                 >ВСЕ ПОПУЛЯРНЫЕ ТОВАРЫ</a
               >
             </div>
@@ -501,7 +503,7 @@
         <section class="popular-brands">
           <h2 class="uppercase">Популярные производители:</h2>
           <a
-            class="button all-brands-btn uppercase"
+            class="main-button all-brands-btn uppercase"
             href="#"
             aria-label="Просмотреть весь список производителей"
             >Все производители</a
