Испр-я: лого, верхняя панель, доп услуги

--- a/catalog.html
+++ b/catalog.html
@@ -420,7 +420,7 @@
                 </div>
                 <div class="product-pop-up">
                   <button
-                    class="button-goods-buyv uppercase"
+                    class="button-goods-buy uppercase"
                     aria-label="Добавить перфоратор BOSCH BFG 6000 в корзину"
                   >
                     Купить
@@ -711,7 +711,7 @@
       <div class="footer-1-wrapper">
         <div class="footer-1">
           <div class="footer-nav-1">
-            <a class="footer logo" href="#" title="Логотип Техномарт"></a>
+            <a class="footer-logo" href="#" title="Логотип Техномарт"></a>
 
             <ul class="footer-nav-list">
               <li class="footer-nav-item">
@@ -859,6 +859,6 @@
         </div>
       </div>
     </footer>
-    <script src="js/catalog.js"></script>
+    <script src="js/catalog.min.js"></script>
   </body>
 </html>
