--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
       <div class="footer-1-wrapper">
         <div class="footer-1">
           <div class="footer-nav-1">
-            <a class="footer logo" href="#" title="Логотип Техномарт"></a>
+            <a class="footer-logo" href="#" title="Логотип Техномарт"></a>
 
             <ul class="footer-nav-list">
               <li class="footer-nav-item">
@@ -981,6 +981,6 @@
         </div>
       </div>
     </footer>
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
   </body>
 </html>
