Испр-я после 1 проверки

--- a/index.html
+++ b/index.html
@@ -750,12 +750,12 @@
                 />
               </p>
               <p class="contact-form-item">
-                <label for="user-email ">Ваш e-mail:</label>
+                <label for="user-email">Ваш e-mail:</label>
                 <input
                   class="user-email user-data"
                   id="user-email"
                   type="email"
-                  name="user-Email"
+                  name="user-email"
                   placeholder="email@example.com"
                 />
               </p>
