--- a/catalog.html
+++ b/catalog.html
@@ -14,7 +14,7 @@
     <header>
       <div class="upper-bar-wrapper">
         <div class="upper-bar">
-          <a href="#" class="logo" title="Логотип Техномарт"></a>
+          <a href="index.html" class="logo" title="Логотип Техномарт"></a>
 
           <div class="upper-bar-options">
             <div class="search-form-container">
@@ -711,7 +711,7 @@
       <div class="footer-1-wrapper">
         <div class="footer-1">
           <div class="footer-nav-1">
-            <a class="footer-logo" href="#" title="Логотип Техномарт"></a>
+            <a class="footer-logo" href="index.html" title="Логотип Техномарт"></a>
 
             <ul class="footer-nav-list">
               <li class="footer-nav-item">
