--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Техномарт</title>
     <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/style.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" href="favicon.ico" />
     <link rel="icon" href="img/icon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="img/180.png" />
@@ -292,7 +292,7 @@
               </div>
               <div class="slider-controls">
                 <button
-                  class="slider-circle-1 current"
+                  class="slider-circle-1 current-circle"
                   type="button"
                   aria-label="Первый слайд"
                 ></button>
@@ -469,9 +469,9 @@
                   </button>
                 </div>
               </article>
-              <article class="product-card main">
+              <article class="product-card main item-new">
                 <h3>Перфоратор BOSCH BFG 2000</h3>
-                <p class="new-product new-popular uppercase">new</p>
+                <!--<p class="new-product new-popular uppercase">new</p>-->
 
                 <img
                   class="product-card-image bfg2000"
@@ -910,6 +910,7 @@
                     /></svg
                 ></a>
               </li>
+              
               <li class="social-btn">
                 <a href="#" aria-label="Фейсбук">
                   <svg
@@ -981,6 +982,6 @@
         </div>
       </div>
     </footer>
-    <script src="js/script.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
